--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
-h1, h2 {
-  font-family: Lato;
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.header {
+  border-bottom: 1px solid #efefef;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 0.9em;
+  padding: 10px 0;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 720px;
 }
